What's New in IDLE 3.8.7
Released on 2020-12-??
======================================


bpo-32631: Finish zzdummy example extension module: make menu entries
work; add docstrings and tests with 100% coverage.

bpo-42508: Keep IDLE running on macOS.  Remove obsolete workaround
that prevented running files with shortcuts when using new universal2
installers built on macOS 11.

bpo-42426: Fix reporting offset of the RE error in searchengine.

bpo-42416: Get docstrings for IDLE calltips more often
by using inspect.getdoc.

bpo-33987: Mostly finish using ttk widgets, mainly for editor,
settings, and searches.  Some patches by Mark Roseman.

bpo-41775: Make 'IDLE Shell' the shell title.

bpo-35764: Rewrite the Calltips doc section.

bpo-40181: In calltips, stop reminding that '/' marks the end of
positional-only arguments.


What's New in IDLE 3.8.6
Released on 2020-09-??
======================================

bpo-41468: Improve IDLE run crash error message (which users should
never see).

bpo-41373: Save files loaded with no line ending, as when blank, or
different line endings, by setting its line ending to the system
default. Fix regression in 3.8.4 and 3.9.0b4.


What's New in IDLE 3.8.5
Released on 2020-07-20
======================================

bpo-41300: Save files with non-ascii chars.  Fix regression in
3.9.0b4 and 3.8.4.


What's New in IDLE 3.8.4
Released on 2020-06-30
======================================

bpo-37765: Add keywords to module name completion list.  Rewrite
Completions section of IDLE doc.

bpo-41152: The encoding of ``stdin``, ``stdout`` and ``stderr`` in IDLE
is now always UTF-8.

bpo-41144: Make Open Module open a special module such as os.path.

bpo-40723: Make test_idle pass when run after import.
Patch by Florian Dahlitz.


What's New in IDLE 3.8.3
Released on 2020-05-13
======================================

bpo-38689: IDLE will no longer freeze when inspect.signature fails
when fetching a calltip.
