@@ -3,6 +3,8 @@ Released on 2020-12-??
 ======================================
 
 
+bpo-33065: Fix problem debugging user classes with __repr__ method.
+
 bpo-32631: Finish zzdummy example extension module: make menu entries
 work; add docstrings and tests with 100% coverage.
 
